--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    123
-</body>
-
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>cy2</title><link href="/css/chunk-6d62c923.e174fa95.css" rel="prefetch"><link href="/js/chunk-6d62c923.c9294540.js" rel="prefetch"><link href="/css/app.ee11edbe.css" rel="preload" as="style"><link href="/js/app.e4b7ea5f.js" rel="preload" as="script"><link href="/js/chunk-vendors.bbe8cb82.js" rel="preload" as="script"><link href="/css/app.ee11edbe.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but cy2 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.bbe8cb82.js"></script><script src="/js/app.e4b7ea5f.js"></script></body></html>
